--- a/src/12_列表渲染/6.vue是如何监测对象中属性的改变的.html
+++ b/src/12_列表渲染/6.vue是如何监测对象中属性的改变的.html
@@ -21,38 +21,41 @@
       <!--准备好一个容器-->
       <div id="root">
            <!-- <h2 v-show=a>欢迎来到{{name}}</h2> -->
-           <h2>人员列表</h2>
-           <button @click="updatemamei">更新马冬梅的信息</button>
-           <ul>
-             <!--遍历数组-->
-             <li v-for="(p, index) in persons" :key="p.id">
-              {{p.id}}        {{p.id}}       {{p.name}}        {{p.sex}}       {{p.age}}
-             </li>
+           <h2>手动实现监测一个对象</h2>
       </div>
     </body>
 
     <script type="text/javascript">
-        Vue.config.productionTip = false //阻止 vue在启动时生成生产提示
+        let data = {
+          name:"尚硅谷",
+          address:"北京"
+        }
         
-        const vm = new Vue({
-            el:'#root',
-            data:{
-                sortType:0,
-                keyWord:'',
-                persons:[
-                  {id:1, name:"马冬梅", sex:'女', age:10},
-                  {id:2, name:"周冬雨", sex:'女', age:15},
-                  {id:3, name:"周杰伦", sex:'男', age:20},
-                  {id:4, name:"温兆伦", sex:'男', age:30},
-                ]
-            },
-            methods: {
-              updatemamei(){
-                //this.persons[0].name = "马老师"
-                this.persons[0] = { name:"马老师", sex:'男', age:50}
+        //创建一个监视的实例对象，用于监视data对象中属性的变化
+        const obs = new Observer(data)
+
+        let vm = {}
+        vm._data = data = obs
+
+        function Observer(obj) {
+          //汇总对象中所有的属性 形成一个数组
+          const keys = Object.keys(obj);
+
+          keys.forEach((k) => {
+            console.log("this: "+ this);
+            Object.defineProperty(this, k, {
+              get(){
+                // return this.k
+                return obj[k]
+              },
+              set(val){
+                console.log(`${k}被修改了，我要去解析模板，重新生成虚拟DOM......`)
+                obj[k] = val
+                //this.k = val
               }
-            },
-        })
+            });
+          })
+        }
     </script>
     
 </html>
