收集表单数据

--- a/src/12_列表渲染/9.Vue是如何监测属性的改变_数组.html
+++ b/src/12_列表渲染/9.Vue是如何监测属性的改变_数组.html
@@ -18,8 +18,8 @@
          Array.pop()
          Array.push()
          Array.splice()
-         Array.shift()
-         Array.unShift()
+         Array.shift() 
+         Array.unshift() 向数组头部添加数据
          Array.sort()
          Array.reverse()
       -->
