自定义指令

--- a/src/15_内置指令/1.v-text指令.html
+++ b/src/15_内置指令/1.v-text指令.html
@@ -31,7 +31,8 @@
         new Vue({
             el:'#root',
             data:{
-                date:Date.now()
+                date:Date.now(),
+                name:'yang'
             },
             
         })
