引出生命周期

--- a/src/16_自定义指令/自定义指令.html
+++ b/src/16_自定义指令/自定义指令.html
@@ -73,7 +73,7 @@
                 name:'yang',
                 n:1
             },
-            directives:{
+            // directives:{
                 //big函数何时会被调用？
                 //1.指令与元素成功绑定时（一上来）。（bind）
                 //2.指令在的模板被重新解析时。（update）
@@ -97,8 +97,8 @@
                 //         element.value = binding.value
                 //         console.log("updated")
                 //     },
-                }
-            }
+            //     }
+            // }
             
         })
     </script>
