--- a/src/15_内置指令/4.v-once指令.html
+++ b/src/15_内置指令/4.v-once指令.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>v-once指令-vue-P43</title>
+        <title>v-pre指令-vue-P44</title>
         <script type="text/javascript" src="../js/vue.js" ></script>
     </head>
     <!--
@@ -31,10 +31,18 @@
                 1.本质上是一个特殊的属性，Vue实例创建完毕并接管容器后，会删掉v-cloak属性。
                 2.使用css配合v-cloak可以解决网速慢时页面上展示出{{xxx}}的问题。        
 
+            
+            v-once指令：
+                1.v-once所在节点在初次动态渲染后，就视为静态内容了。
+                2.以后数据的改变不会再引起v-once所在节点值的变化，可以用于优化性能。
+                
+            v-pre指令：
+                1.跳过其所在节点的编译过程。
+                2.可利用它跳过：没有使用指令语法、没有使用插值语法的节点，会加快编译。    
     -->
     <body>
         <div id="root">
-            <h2 v-once>Vue初始化一次：{{n}}</h2>
+            <h2 v-pre>Vue其实很简单</h2>
             <h2>Vue n的值时：{{n}}</h2>
             <button @click="n++">n+1</button>
         </div>
