--- a/src/15_内置指令/5.v-pre指令.html
+++ b/src/15_内置指令/5.v-pre指令.html
@@ -31,6 +31,9 @@
                 1.本质上是一个特殊的属性，Vue实例创建完毕并接管容器后，会删掉v-cloak属性。
                 2.使用css配合v-cloak可以解决网速慢时页面上展示出{{xxx}}的问题。        
 
+            v-once指令：
+                1.v-once所在节点在初次动态渲染后，就视为静态内容了。
+                2.以后数据的改变不会再引起v-once所在节点值的变化，可以用于优化性能。    
     -->
     <body>
         <div id="root">
